--- a/navigationBar.css
+++ b/navigationBar.css
@@ -21,7 +21,7 @@ body {
 /* ------------------------------ Start of Banner ------------------------------ */
 /* ---------- Start of Main Container ---------- */
 .banner {
-	padding-top: 6px;
+
 	box-shadow: inset 	0 4px 5px -5px #000000;
 	margin-left: 0;
 	margin-right: 0;
@@ -171,9 +171,11 @@ footer {
 	height: 3.5rem;
 
 
+
 }
 footer > ul {
 	display: grid;
+	margin-bottom: 0px;
 	justify-content: center;
 	background-color: #272c51;
 	height: 6rem;
